src/Seesaw.css
.seesawContent {
    width: 100%;
    height: 100%;
}

.seesawWrapper {
    position: relative;
    width: 300px;
    height: 500px;
    margin: 0 auto;
}

.seesawBottomSection {
    position: absolute;
    bottom: 0;
}

.seesawBase {
    position: absolute;
    bottom: 0;
}

.seesawBaseImg {
    max-width: 100%;
    height: auto;
    box-sizing: border-box;
}

.seesawSwingyPart {
    max-width: 100%;
    height: auto;
    box-sizing: border-box;
}

.seesawSwingyImg {
    max-width: 100%;
    height: auto;
    box-sizing: border-box;
}

.seesawSideA {
    max-width: 100%;
    height: auto;
    box-sizing: border-box;
    position: absolute;
    bottom: 0;
    z-index: -100;
}

.seesawSideB {
    max-width: 100%;
    height: auto;
    box-sizing: border-box;
    position: absolute;
    bottom: 0;
    z-index: -100;
}

.seesawSideAImg {
    max-width: 100%;
    height: auto;
    box-sizing: border-box;
}

.seesawSideBImg {
    max-width: 100%;
    height: auto;
    box-sizing: border-box;
}

.optionBlock {
    width: 70px;
    height: 36px;
    line-height: 36px;
    text-align: center;
    display: flex;
    align-items: center;
}

.optionBlock img {
    max-width: 100%;

}

.seesawOptionsA {
    width: 150px;
    left: -18px;
    width: 150px;
    position: absolute;
    bottom: 86px;
}

.options1Set {
    width:140px;
    height: 35px;
}
.options2Set {
    width:140px;
    height: 35px;
}

.blockA {
    position: absolute;
    left: 0;
}

.blockB {
    position: absolute;
    left: 67px;
}

.blockC {
    position: absolute;
    left: 35px;
}

.blockText {
    position: absolute;
    width: 100%;
    text-align: center;
    font-size: 10px;
    color: white;
    white-space: nowrap;
    overflow: hidden;

    /* display: inline-block; */
}

